tests/paczka1/fuzzy1/90281112.err
Error in line 10: TkEVI A102 66,9
Error in line 3: K5671 A507 84,9
